--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>JAVASCRIPT</title>
+    <title>Exercicios</title>
     <script src="script.js">  </script>
 </head>
 <body>
