Junçaõ de todos os arquivos na pasta excercicios

--- a/Execicios_base.js/index.html
+++ b/Execicios_base.js/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Exercicios</title>
-    <script src="script.js">  </script>
+    <title>Excercicios</title>
+    <script src="exercicios.js"></script>
 </head>
 <body>
     
